referencias y modificación de abstract para incluir nuevas referencias

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,15 @@
 @article{Suankaewmanee, title={Performance Analysis and Application of Mobile Blockchain}, author={Kongrath Suankaewmanee et al.}, year={2013}, month={Nov}}
+@article{Cole, title={Modeling the Energy Consumption of Blockchain Consensus Algorithms}, author={Ryan Cole et al.}, year={2018}, month={July}}
+@article{Zehui, title={Optimal Pricing-Based Edge Computing Resource Management in Mobile Blockchain}, author={Zehui Xiong et al.}, year={2018}, month={May}}
+@article{Yang, title={When Mobile Blockchain Meets Edge Computing}, author={Yang Zhang et al.}, year={2018}, month={April}}
+@article{Dinh, title={Privacy-Preserved Task Offloading in Mobile Blockchain with Deep Reinforcement Learning}, author={Dinh C. Nguyen et al.}, year={2019}, month={Aug}}
+@article{Gilsoo, title={Performance Analysis of Blockchain Systems with Wireless Mobile Miners}, author={Gilsoo Lee et al.}, year={2019}, month={Jan}}
+@article{Nguyen, title={Optimal Auction For Edge Computing Resource Management in Mobile Blockchain Networks: A Deep Learning Approach}, author={Nguyen Cong Luong et al.}, year={2017}, month={Jan}}
+@article{He, title={EdgeChain: Blockchain-based Multi-vendor Mobile Edge Application Placement}, author={He Zhu et al.}, year={2018}, month={Jan}}
+@article{Ruzanna, title={Review of Blockchain Technology and its Expectations: Case of the Energy Sector}, author={Ruzanna Chitchyan et al.}, year={2018}, month={March}}
+@article{Wang, title={When Energy Trading meets Blockchain in Electrical Power System: The State of the Art}, author={Naiyu Wang et al.}, year={2019}, month={Feb}}
+@article{Yutao, title={Social Welfare Maximization Auction in Edge Computing Resource Allocation for Mobile Blockchain}, author={Yutao Jiao et al.}, year={2017}, month={Nov}}
+
 @book{lamport_1994, place={Reading, MA}, title={LaTeX: a document preparation system}, publisher={Addison-Wesley}, author={Lamport, Leslie}, year={1994}}
 @misc{ctan, title={The Comprehensive TeX Archive Network}, url={https://ctan.org/}, journal={CTAN Atom}}
 @misc{thelatex3, url={https://www.latex-project.org/latex3/}, journal={The LaTeX3 Project}}
