--- a/latexMan.tex
+++ b/latexMan.tex
@@ -444,7 +444,7 @@
   Also, it will help application designers to define the scope of its application in terms of performance and power 
   consumption when it is executed in a mobile device and a high compute rate is expected to perform the blockchain mining process.
   In regard of related work, there is a research about a blockchain system for mobile systems\cite{Suankaewmanee}, 
-  and an energy model for blockchain consensus algorithm [2][3]. 
+  and an energy model for blockchain consensus algorithm \cite{Cole} \cite{Zehui}. Also, blockchain edge is researched in \cite{Yang} \cite{He} \cite{Yutao}. Deep learning approaches are researched in \cite{Nguyen} \cite{Dinh}. There is a research about wireless mobile miners \cite{Gilsoo} and also energy systems are researched in \cite{Ruzanna} \cite{Wang}. 
 \end{abstract}
 
 % Note that keywords are not normally used for peerreview papers.
