Agregar "Future work" y PDF actualizado

--- a/latexMan.tex
+++ b/latexMan.tex
@@ -552,16 +552,13 @@ In \cite{Yang} the authors consider an edge computing enabled mobile blockchain 
 
 \section{Future Work}
 
-Arguably the most important piece of work to conduct in the near future is to make this algorithm able  proposed network live. This will then let
-us examine in greater detail whether the assumptions in this
-paper hold true against a real world adversary, who controls
-various percentages of the network.
-The deployment onto a real world network would also allow
-us to see whether our solutions to known issues and limitations
-hold true, or if new issues surface. It would also allow more
-research into possible attack vectors, such as an offline chain
-attack, and the effect that this would have on the integrity of the
-data, as well as possible ways to prevent this attack.
+Arguably the most important piece of work to conduct in the future is to make this proposed algorithm live, running on a complete market with thousands of transactions per day in a single or multiple devices. This will then let us examine in greater detail whether the assumptions in this paper hold true against a real world adversary, who controls various percentages of the network and other variables that may affect the obtained results.
+
+The deployment onto a real world transactions network would also allow us to see whether our solutions to known issues and limitations hold true, or if new issues surface. It would also allow more research into possible secutiry vectors, such as an offline or online Internet connections between several mobile devices generating movements on the block chain.
+
+Another key research area is implementing this algorithm, for example on a distrusted reputation network, to accurately model how the roll of the blockchain should be performed: i.e. whether a simple time period is sufficient, or if a more sophisticated model is required to allow millions of crypto or normal currency transactions to be processed in mobile devices.
+
+As a major barrier for large-scale IoT blockchains is the transaction time, future research could be conducted to find out how the size of blockchain networks impacts the transaction time and what trade-offs between the energy usage and the transaction time may be on large-scale blockchains.
 
 
 
