Added paper sections from overleaf project to keep tracking in git

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,5 +1,4 @@
-@article{Suankaewmanee, title={Performance Analysis and Application of Mobile Blockchain}, author={Kongrath Suankaewmanee et al.}, year={2013}, month={Nov}}
-@article{Cole, title={Modeling the Energy Consumption of Blockchain Consensus Algorithms}, author={Ryan Cole et al.}, year={2018}, month={July}}
+@article{Suankaewmanee, title={Performance Analysis and Application of Mobile Blockchain}, author={Kongrath Suankaewmanee et al.}, year={2013}, month={Nov}}@article{Cole, title={Modeling the Energy Consumption of Blockchain Consensus Algorithms}, author={Ryan Cole et al.}, year={2018}, month={July}}
 @article{Zehui, title={Optimal Pricing-Based Edge Computing Resource Management in Mobile Blockchain}, author={Zehui Xiong et al.}, year={2018}, month={May}}
 @article{Yang, title={When Mobile Blockchain Meets Edge Computing}, author={Yang Zhang et al.}, year={2018}, month={April}}
 @article{Dinh, title={Privacy-Preserved Task Offloading in Mobile Blockchain with Deep Reinforcement Learning}, author={Dinh C. Nguyen et al.}, year={2019}, month={Aug}}
@@ -9,9 +8,25 @@
 @article{Ruzanna, title={Review of Blockchain Technology and its Expectations: Case of the Energy Sector}, author={Ruzanna Chitchyan et al.}, year={2018}, month={March}}
 @article{Wang, title={When Energy Trading meets Blockchain in Electrical Power System: The State of the Art}, author={Naiyu Wang et al.}, year={2019}, month={Feb}}
 @article{Yutao, title={Social Welfare Maximization Auction in Edge Computing Resource Allocation for Mobile Blockchain}, author={Yutao Jiao et al.}, year={2017}, month={Nov}}
-
-@book{lamport_1994, place={Reading, MA}, title={LaTeX: a document preparation system}, publisher={Addison-Wesley}, author={Lamport, Leslie}, year={1994}}
-@misc{ctan, title={The Comprehensive TeX Archive Network}, url={https://ctan.org/}, journal={CTAN Atom}}
-@misc{thelatex3, url={https://www.latex-project.org/latex3/}, journal={The LaTeX3 Project}}
-@misc{callegar_2015, title={callegar/LaTeX-draftwatermark}, url={https://github.com/callegar/LaTeX-draftwatermark}, journal={GitHub}, author={Callegar}, year={2015}, month={Jun}}
-@article{oostrum_2019, title={The fancyhdr and extramarks packages}, url={http://mirrors.ucr.ac.cr/CTAN/macros/latex/contrib/fancyhdr/fancyhdr.pdf}, journal={The fancyhdr and extramarks packages}, author={Oostrum, Piet van}, year={2019}, month={Jan}}
+@article{crosby2016, title={BlockChain Technology: Beyond Bitcoin}, number={2}, journal={Berkeley, Applied Innovation Review}, author={Crosby, Michael}, year={2016}, month={Jun}, pages={7–19}}
+@article{xiongfengniyatowanghan2018, title={Optimal Pricing-Based Edge Computing Resource Management in Mobile Blockchain}, DOI={10.1109/icc.2018.8422517}, journal={2018 IEEE International Conference on Communications (ICC)}, author={Xiong, Zehui and Feng, Shaohan and Niyato, Dusit and Wang, Ping and Han, Zhu}, year={2018}}
+@article{ZehuiXiong,author = {Xiong, Zehui and Feng, Shaohan and Niyato, Dusit and Wang, Ping and Han, Zhu},year = {2017},month = {10},pages = {},title = {Edge Computing Resource Management and Pricing for Mobile Blockchain}}
+@article{fairley2017, title={Blockchain world - Feeding the blockchain beast if bitcoin ever does go mainstream, the electricity needed to sustain it will be enormous}, volume={54}, DOI={10.1109/mspec.2017.8048837}, number={10}, journal={IEEE Spectrum}, author={Fairley, Peter}, year={2017}, month={Sep}, pages={36–59}}
+@misc{digiconomist, title={Bitcoin Energy Consumption Index}, url={https://digiconomist.net/bitcoin-energy-consumption}, journal={Digiconomist}}
+@article{bravo-marquezreevesugarte2019, title={Proof-of-Learning: A Blockchain Consensus Mechanism Based on Machine Learning Competitions}, DOI={10.1109/dappcon.2019.00023}, journal={2019 IEEE International Conference on Decentralized Applications and Infrastructures (DAPPCON)}, author={Bravo-Marquez, Felipe and Reeves, Steve and Ugarte, Martin}, year={2019}}
+@article{giladhemomicalivlachoszeldovich2017, title={Algorand}, DOI={10.1145/3132747.3132757}, journal={Proceedings of the 26th Symposium on Operating Systems Principles - SOSP 17}, author={Gilad, Yossi and Hemo, Rotem and Micali, Silvio and Vlachos, Georgios and Zeldovich, Nickolai}, year={2017}}
+@book{perfmonitoring:1991,
+ author = {Jain, Raj},
+ title = {The Art of Computer Systems Performance Analysis},
+ year = {1991},
+ isbn = {0471503363},
+ edition = {First},
+ publisher = {John Wiley \& Sons},
+}
+@article{Buterin2017, title={Ethereum: A next-generation cryptocurrency and
+decentralized application}, author={V. Buterin}, year={2017}, month={Apr}}
+@article{Bamert2017, title={BlueWallet: The secure Bitcoin wallet}, author={T. Bamert, et al}, month={Sept}}
+@article{TQiu2017, title={Heterogeneous Internet of Things Build our Future: A Survey, IEEE Communications Surveys \& Tutorials}, author={T. Qiu, et al}, year={2018}, month={February}}
+@article{Kroll2013, title={The economics of Bitcoin mining or Bitcoin in the presence of adversaries}, author={J. Kroll, et al}, year={2013}}
+@article{RyanCole, title={Modeling the Energy Consumption of Blockchain Consensus Algorithms}, author={Ryan Cole, et al}}
+@article{RichardDennis, title={A Temporal Blockchain: A Formal Analysis}, author={Richard Dennis, et al}}
